# bt-servant-message-broker

./: .gitignore  .importlinter  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: ci.yml  deploy.yml
docs/: phase-2-implementation-plan.md  phase-3-implementation-plan.md  prd.md
docs/test_plans/: phase-3-e2e-tests.md
src/bt_servant_message_broker/: __init__.py  config.py  main.py
src/bt_servant_message_broker/api/: __init__.py  dependencies.py  routes.py
src/bt_servant_message_broker/models/: __init__.py  messages.py
src/bt_servant_message_broker/services/: __init__.py  message_processor.py  queue_manager.py  stream_proxy.py  worker_client.py
src/bt_servant_message_broker/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_queue_integration.py
tests/unit/: __init__.py  test_api.py  test_config.py  test_dependencies.py  test_logging.py  test_message_processor.py  test_models.py  test_queue_manager.py  test_stream_proxy.py  test_worker_client.py
