[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt-servant-message-broker"
version = "0.1.0"
description = "Message broker service for BT Servant — per-user message queueing and ordering"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "unfoldingWord", email = "info@unfoldingword.org" }]
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.121",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.28",
  "redis>=5.0",
  "sse-starlette>=2.0",
  "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
  "python-dotenv>=1.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pyright>=1.1",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "deptry>=0.16",
  "import-linter>=2.0",
  "pre-commit>=3.8",
  "typing-extensions>=4.12",
]

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["bt_servant_message_broker*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "DTZ", "PL"]
ignore = ["E501", "W291", "W293", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# Allow Depends() in function defaults (FastAPI pattern)
"src/bt_servant_message_broker/api/dependencies.py" = ["B008"]

[tool.ruff.lint.pylint]
max-statements = 50
max-branches = 12
max-returns = 6
max-args = 5

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
pretty = true
mypy_path = "src"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]
markers = [
    "integration: marks tests as integration tests (require Redis)",
]

[tool.deptry]
ignore_notebooks = true
exclude = ["venv", ".venv", "build", "dist", "tests"]
known_first_party = ["bt_servant_message_broker"]
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.per_rule_ignores]
# uvicorn: CLI entrypoint, not imported
DEP002 = ["uvicorn"]

[tool.pylint.similarities]
min-similarity-lines = 1000
